--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Home Page</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
-    <div class="container">
-        <h1>Welcome to My Flask Website!</h1>
-        <p>This is a beautiful home page.</p>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<!-- Hero Banner Slider -->
+<div class="container-fluid p-0">
+    <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            {% for banner in banners %}
+            <div class="carousel-item {% if loop.first %}active{% endif %}" style="height: 350px;">
+                <div class="position-relative w-100 h-100" style="background: url('{{ banner.image_url }}') center/cover no-repeat; height: 350px;">
+                    <div class="position-absolute top-50 start-50 translate-middle text-center text-white" style="width: 100%;">
+                        <h1 style="font-size: 3rem; font-family: 'Pacifico', cursive; letter-spacing: 2px;">{{ banner.heading }}</h1>
+                        <p class="lead">{{ banner.sub_heading }}</p>
+                        <a href="{{ banner.read_more_link }}" class="btn btn-info btn-lg mt-2">Explore Now</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
