--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -34,6 +34,17 @@
 
                 <hr />
 
+                <h5>Category</h5>
+                <div class="mb-3">
+                    {{ form.category_id.label(class="form-label") }}
+                    {{ form.category_id(class="form-select") }}
+                    {% if form.category_id.errors %}
+                        <div class="text-danger">
+                            {{ form.category_id.errors }}
+                        </div>
+                    {% endif %}
+                </div>
+
                 <h5>SEO Fields</h5>
                 <div class="mb-3">
                     {{ form.meta_title.label(class="form-label") }}
