--- a/templates/frontend/front-base.html
+++ b/templates/frontend/front-base.html
@@ -41,6 +41,12 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'contact' %}active{% endif %}" href="{{ url_for('contact') }}">Contact</a>
                     </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'product_display' %}active{% endif %}" href="{{ url_for('product_display') }}">
+                            Product
+                        </a>
+                    </li>
 
                 </ul>
             </div>
