home page desing

--- a/templates/frontend/product_display.html
+++ b/templates/frontend/product_display.html
@@ -1,4 +1,4 @@
-{% extends "front-base.html" %}
+{% extends "frontend/front-base.html" %}
 {% block title %}Products{% endblock %}
 
 {% block content %}
